Added user data, tasks
